--- a/templates/home.html
+++ b/templates/home.html
@@ -4,19 +4,29 @@
 
 {% block css2 %}
     <style type="text/css">
+
     </style>
 {% endblock %}logo2
 
 
 {% block content %}
 
-   HOME
+
+
+    <h3>Привет</h3>
 
 
 {% endblock %}
 
 
 
+
+
+{% block js %}
+    <script type="text/javascript">
+
+    </script>
+{% endblock %}
 
 
 
