--- a/templates/_maket/footer.html
+++ b/templates/_maket/footer.html
@@ -3,47 +3,52 @@
 <footer class="page-footer font-small stylish-color-dark"
         style="margin-top: 170px;">
 
-    <div class="container" style="padding-top: 20px">
-        <div class="row justify-content-md-center">
-            <div class="col-lg-6 text-center">
+    {% if user.id %}
 
-                <h5 class="text-uppercase mb-4 mt-3 font-weight-normal">citizen</h5>
 
+        <div class="container" style="padding-top: 20px">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-6 text-center">
+
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-normal">citizen</h5>
+
+                </div>
             </div>
         </div>
-    </div>
 
-    <hr>
+        <hr>
 
-    <div class="text-center">
-        <ul class="list-unstyled list-inline">
-            <li class="list-inline-item">
-                <a class="btn-floating btn-sm btn-fb mx-1" href="" target="_blank">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a class="btn-floating btn-sm btn-tw mx-1" href="" target="_blank">
-                    <i class="fab fa-twitter"> </i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a class="btn-floating btn-sm btn-li mx-1" href="" target="_blank">
-                    <i class="fab fa-vk"> </i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a class="btn-floating btn-sm btn-gplus mx-1" href="">
-                    <i class="fas fa-envelope"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a class="btn-floating btn-sm btn-dribbble mx-1" href="" target="_blank">
-                    <i class="fab fa-dribbble"> </i>
-                </a>
-            </li>
-        </ul>
-    </div>
+        <div class="text-center">
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm btn-fb mx-1" href="" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm btn-tw mx-1" href="" target="_blank">
+                        <i class="fab fa-twitter"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm btn-li mx-1" href="" target="_blank">
+                        <i class="fab fa-vk"> </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm btn-gplus mx-1" href="">
+                        <i class="fas fa-envelope"></i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a class="btn-floating btn-sm btn-dribbble mx-1" href="" target="_blank">
+                        <i class="fab fa-dribbble"> </i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+    {% endif %}
 
     <div class="footer-copyright py-3 text-center">
         © 2019 Copyright:<a href="https://vk.com/id95074562" target="_blank"> Yarikov Sergey</a>
