--- a/templates/_maket/header.html
+++ b/templates/_maket/header.html
@@ -1,15 +1,24 @@
 {% load static %}
 
-<div class="navbar navbar navbar-fixed-top">
-    <div class="container">
+{% if user.id %}
+    <div class="navbar navbar navbar-fixed-top">
+        <div class="container">
 
-        <a class="navbar-brand" href="{% url 'home' %}">HOME</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Главная</a>
 
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'orders' %}">Orders</a>
-            </li>
-        </ul>
 
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'orders' %}">Заказы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'prices' %}">Прайсы</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Выход</a>
+                </li>
+            </ul>
+
+        </div>
     </div>
-</div>
+{% endif %}
