--- a/templates/_maket/metadata.html
+++ b/templates/_maket/metadata.html
@@ -18,7 +18,8 @@
 <link rel="stylesheet" href="{% static 'css/alert.css' %}">
 <link rel="stylesheet" href="{% static 'css/note.css' %}">
 
-<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.5.13.min.css?ver=4.5.13' type='text/css' media='all' />
+{#<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.5.13.min.css?ver=4.5.13' type='text/css' media='all' />#}
+<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.7.6.min.css?ver=4.7.6' type='text/css' media='all' />
 
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/32px.png">
