--- a/templates/_maket/metadata.html
+++ b/templates/_maket/metadata.html
@@ -11,19 +11,10 @@
 
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 {#<link rel="stylesheet" href="{% static 'css/mdb4/mdb.min.css' %}">#}
 <link rel="stylesheet" href="{% static 'css/mdb4/compiled.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/alert.css' %}">
-<link rel="stylesheet" href="{% static 'css/note.css' %}">
 
 {#<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.5.13.min.css?ver=4.5.13' type='text/css' media='all' />#}
-<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.7.6.min.css?ver=4.7.6' type='text/css' media='all' />
-
-
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/32px.png">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/40px.png">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/style.min.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default/throbber.gif">
-
+{#<link rel='stylesheet' id='compiled.css-css'  href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled-4.7.6.min.css?ver=4.7.6' type='text/css' media='all' />#}
